@@ -1,4 +1,4 @@
-This is OpenDDS version 3.4.1, released Wed Feb 27 16:29:08 UTC 2013.
+This is OpenDDS version 3.5, released Mon Jan 27 02:24:51 UTC 2014.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
